Made .ini visable in solution explorer

--- a/EnhancedVehicleLightingControls.csproj
+++ b/EnhancedVehicleLightingControls.csproj
@@ -48,5 +48,8 @@
     <Compile Include="main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="EVLC_Settings.ini" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
