*Updated .ini for controller support. *Cleaned up .ini and reflected changes in main.cs

--- a/EVLC_Settings.ini
+++ b/EVLC_Settings.ini
@@ -1,8 +1,17 @@
 [Emergency Vehicles]
-Siren_Toggle_Key=T
+Siren_Toggle_Key=Tab
+Siren_Toggle_Button=ScriptPadDown
 
-[All]
+[Headlights]
 Beam_Toggle_Key=CapsLock
+Beam_Toggle_Button=ScriptRLeft
+
+[Interior]
 Interior_Light_toggle_key=I
+
+[Indicators]
 Left_Indicator_Key=Left
+Left_Indicator_Button=ScriptPadLeft
+
 Right_Indicator_Key=Right
+Right_Indicator_Button=ScriptPadRight
