--- a/EVLC_Settings.ini
+++ b/EVLC_Settings.ini
@@ -7,7 +7,7 @@ Beam_Toggle_Key=CapsLock
 Beam_Toggle_Button=ScriptRLeft
 
 [Interior]
-Interior_Light_toggle_key=I
+Interior_Light_toggle_Key=I
 
 [Indicators]
 Left_Indicator_Key=Left
@@ -15,3 +15,6 @@ Left_Indicator_Button=ScriptPadLeft
 
 Right_Indicator_Key=Right
 Right_Indicator_Button=ScriptPadRight
+
+Hazard_Lights_Key=Down
+Hazard_Lights_Button=ScriptRB
