Improved Controller Support.
Add modifier button to enable mod controls.

--- a/EVLC_Settings.ini
+++ b/EVLC_Settings.ini
@@ -1,3 +1,5 @@
+See docs/ControllerButtonList for valid controller binds.
+
 [Emergency Vehicles]
 Siren_Toggle_Key=Tab
 Siren_Toggle_Button=ScriptPadDown
@@ -18,3 +20,6 @@ Right_Indicator_Button=ScriptPadRight
 
 Hazard_Lights_Key=Down
 Hazard_Lights_Button=ScriptRB
+
+[Mod Settings]
+Modifier_Button=ScriptLB
